styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    outline: 1px solid skyblue;
}

body {
    font-family: 'PT Sans', Arial, sans-serif;
    background-color: #E7E5E5;
    min-height: 100vh;
}

.container {
    background-color: #FFFFFF;
    max-width: 1200px;
    margin: 0 auto;
    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
}

.header {
    position: relative;
}

.header__container {
    max-width: 1200px;
    margin: 0 auto;
    height: 56px;
}

.nav__list {
    display: flex;
    list-style: none;
    text-align: center;
}

.nav__item {
    width: 20%;
}

.nav__item:nth-child(2) {
    margin-right: 20%;
}

.nav__link {
    font-family: 'PT Sans', sans-serif;
    font-weight: bold;
    line-height: 21px;
    font-size: 14px;
    text-decoration: none;
    color: #000000;
    text-transform: uppercase;
    padding-top: 18px;
    padding-bottom: 17px;
    display: block;
}

.nav__link--current {
    color: rgba(118, 99, 87, 1);
}

.nav__link:hover {
    color: rgba(129, 179, 210, 1);
}

.nav-link:active {
    color: rgba(179, 179, 179, 1);
}

.header__logo {
    position: absolute;
    top: 0;
    left: calc(50% - 93px);
    z-index: 1;
}

.header__pic {
    display: block;
}

.hero {
    position: relative;
    background-image: url(images/back-desktop.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    padding-top: 78px;
    padding-bottom: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 59px;
}

.hero::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    background: url(images/decor.svg) no-repeat;
    background-position: center;
    height: 57px;
}

.hero__pic {
    display: block;
    width: 461px;
    height: 350px;
}

@media (max-width: 980px) {
    .hero {
        padding-top: 77px;
        padding-bottom: 94px;
    }
}


.header__burger {
    border: 0;
    background-color: transparent;
    cursor: pointer;
    width: 72px;
    height: 100%;
    display: none;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding-top: 17px;
}

.header__burger-line {
    background-color: rgba(129, 179, 210, 1);
    Width: 24px;
    height: 4px;
    display: flex;
    align-items: center;
    margin-top: 5px;
}

.header__burger-line:first-child {
    margin-top: 0;
}   

@media (max-width: 980px) {
    .hero__pic {
        width: 461px;
        height: 350px;
    }
}

@media (max-width: 767.89px) {
    .nav__container {
        justify-content: flex-end;
        display: flex;
    }

    .nav__burger {
        display: block;
        position: relative;
    }

    .nav__list {
        display: none;
    }

    .hero {
        padding-top: 90px;
        padding-bottom: 85px;
        margin-bottom: 46px;
    }

    .hero__pic {
        width: 282px;
        height: 214px;
    }

    .nav {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        background-color: #81B3D2;
        z-index: 1;
        display: none;
        padding-left: 0;
        padding-right: 0;
    }

    .nav--active {
        display: block;
    }

    .nav__list {
        display: block;
    }

    .nav__item {
        width: 100%;
        background:
            linear-gradient(rgba(102, 158, 192, 1), rgba(102, 158, 192, 1)) no-repeat left bottom 1px/100% 1px,
            linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .2)) no-repeat left bottom/100% 2px;
    }

    .nav__item--drop {
        position: relative;
    }

    .nav__item:last-child {
        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%) no-repeat left bottom -5.38%/100% 7px;
    }

    .nav__link {
        font-family: 'PT Sans', Arial, sans-serif;
        font-weight: 700;
        font-size: 18px;
        line-height: 26px;
        color: rgba(255, 255, 255, 1);
        padding-top: 17px;
        padding-bottom: 12px;
        display: block;
    }

    .nav__burger--active {
        z-index: 1;
    }

    .nav__item:active {
        background-color: rgba(84, 150, 189, 1);
    }

    .nav__link:active {
        color: #FFFFFF;
        opacity: 0.3;
    }

    .header__burger--active .header__burger-line:first-child {
        display: none;
    }

    .header__burger--active .header__burger-line:nth-child(2) {
        transform: rotate(45deg);
    }

    .header__burger--active .header__burger-line:nth-child(3) {
        transform: rotate(-45deg);
    }

    .header__burger--active .header__burger-line {
        background-color: #FFFFFF;
        position: absolute;
        top: 50%;
        left: 50%;
        margin-top: -2px;
        margin-left: -12px;
        z-index: 1;
    }

    @media (hover:hover) {
        .nav__item:hover {
            color: rgba(129, 179, 210, 1);
        }

        .nav__link:hover {
            color: rgba(255, 255, 255, 1);
        }
    }
}

.about__heading {
    max-width: 550px;
    margin: 0 auto 44px auto;
    text-align: center;
}

@media (max-width: 767.89px) {
    .about__heading {
        max-width: 300px;
        margin: -12px auto 53px auto;
    }
}

.h2 {
    font-family: 'PT Sans', Arial, sans-serif;
    font-weight: 700;
    font-size: 21px;
    line-height: 26px;
    color: #000;
    text-transform: uppercase;
}

.h2--bottom-offset {
    margin-bottom: 32px;
}

.h2--light {
    color: #fff;
}

.h2--fontsize {
    font-size: 30px;
}

.default-text {
    font-size: 14px;
    line-height: 21px;
    color: #333;
    text-transform: uppercase;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

.info {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
}

@media (max-width: 695px) {
    .promo {
        flex-direction: column;
    }
}

.info__inner {
    display: flex;
}

.info__inner-pic {
    margin-bottom: 26px;
}

.info__inner-item {
    padding: 69px 50px 69px 51px;
    text-align: center;
    width: 33.33%;
}


.info__inner-title {
    margin-bottom: 21px;
}

.info__inner-text {
    margin-bottom: 0;
}

@media (max-width: 320px) {
    .info__inner-text {
        width: 320px;
    }
}

@media (max-width: 695px) {
    .info__inner-text {
        margin-bottom: 25px;
        text-align: left;
        max-width: 480px;
    }
}

.info__number {
    margin-bottom: 21px;
}

.promo {
    display: flex;
}

@media (max-width: 695px) {
    .promo--order {
        flex-direction: column-reverse;
    }
}

.promo--order .promo__descr {
    margin-bottom: 0;
}

.promo__descr {
    text-align: center;
    background-color: #81B3D2;
    padding: 54px 50px 51px 50px;
    color: #fff;
    text-transform: uppercase;
    flex-shrink: 0;
    width: 33.333%;
}

@media (max-width: 768px){
    .promo__pic{
        max-height: 526px;
    }
}

@media (max-width: 695px) {

    .promo__descr {
        padding: 54px 18px 43px 18px;
        width: 100%;
        margin-bottom: 37px;
    }
}

@media (max-width: 768px){
    .promo__descr{
        padding-top: 53px;
    }
}

.promo__title {
    color: #fff;
    margin-bottom: 10px;
    padding: 0 30px 0 30px;
}

.promo__number {
    margin-bottom: 21px;
    Font-size: 14px;
    line-height: 21px;
    display: block;
}

@media (max-width:769px){
    .promo__number{
        margin-bottom: 27px;
    }

}

.promo__text {
    font-size: 14px;
    line-height: 21px;
    text-transform: uppercase;
}

.promo__pic {
    object-fit: cover;
    width: 66.666%;
    height: auto;
}

@media(max-width: 695px) {
    .promo__pic {
        width: 100%;
        height: 256px;
    }

    .promo__pic--gap {
        margin-bottom: 20px;
        width: 100%;
    }
}

.info__title {
    margin: 0 auto 13px auto;
    width: 150px;
    font-weight: 700;
    font-size: 21px;
    line-height: 26px;
    padding: 0 10px;
}

.info__item {
    text-align: center;
}

.info__number {
    margin-bottom: 21px;
    display: block;
}

.info__item--narrow {
    width: 33.333%;
    padding: 60px 53px 40px;
}

.info__item--muted {
    background-color: #eee;
}

@media (max-width: 1000px) {
    .info__item--narrow {
        width: 50%;
    }
}

@media (max-width: 695px) {
    .info__item--narrow {
        padding: 24px 0px 0 18px;
        background-color: #eee;
        width: 100%;
    }
}

@media (max-width: 695px) {

    .info {
        flex-direction: column;
    }

    .info__inner {
        flex-direction: column;
        padding: 0 18px 28px 18px;
    }

    .info__text {
        border-bottom: 1px solid #D6D6D6;
        padding-bottom: 12px;
        display: block;
    }

    .info__inner-pic {
        width: 40px;
        height: 40px;
        position: absolute;
        left: 0;
        top: 0;
    }

    @media (max-width: 768px){
        .info__inner-pic{
            margin-bottom: 13px;
            }
        .info__item--narrow{
            padding: 52px 7px 53px;
        }
    }
}

    .info__inner-item {
        position: relative;
        padding: 8px 0 0 47px;
        width: 100%;
    }

    .info__inner-item{
        padding-bottom: 43px;
    }

    .info__inner-title {
        text-align: start;
        margin-bottom: 16px;
    }


.help__heading {
    text-align: center;
    margin: 0 auto 44px auto;
    max-width: 435px;
}

.btn {
    border: 0;
    cursor: pointer;
    display: inline-block;
    text-decoration: none;
    background-color: transparent;
    font: 21px/26px 'PT Sans', Arial, sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    color: unset;
    padding: 0;
    text-align: center;
    box-sizing: border-box;
}

.btn--primarry {
    background-color: #81B3D2;
    color: #fff;
}

.btn--primarry:hover {
    background-color: #669EC0;
}

.btn--primarry:active {
    background-color: #5496BD;
    color: rgba(255, 255, 255, 0.3);
}

.btn--size-large {
    padding-top: 16px;
    padding-bottom: 16px;

}

.btn--fixed-width {
    width: 458px;
}

@media (max-width: 695px) {
    .btn--fixed-width {
        width: 100%;
    }

    .help--offset {
        padding-left: 18px;
        padding-right: 18px;
    }
}

.help--offset {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding-top: 60px;
}

.help--offset-bottom {
    margin-bottom: 65px;
}

.map {
    margin-bottom: 33px;
}

.map__pic {
    /* display: block; */
    width: 100%;
    height: auto;
    object-fit: cover;
}

@media(max-width: 695px) {}

.footer__list {
    display: flex;
    justify-content: space-between;
    padding-left: 120px;
    padding-right: 143px;
}

.footer__list-item {
    margin-right: 87px;
}

.footer__title--offset {
    padding-top: 13px;
    margin-right: 60px;
}

.footer__title--offset-right {
    display: flex;
}

.footer__list-item-flex {
    display: flex;
    width: 89px;
}

.footer__title--font {
    font: 14px/21px 'PT Sans', Arial, sans-serif;
}

.footer__title-pic {
    margin-top: 7px;
}

.social {
    display: flex;
    align-items: center;
    justify-content: center;
}

.social__item {
    background-color: #5496BD;
    display: block;
    width: 48px;
    height: 48px;
    text-decoration: none;
    cursor: pointer;
    text-align: center;
    margin-right: 6px;
    margin-bottom: 36px;
}

.social__item:last-child {
    margin-right: 0;
}

.social__link {
    background-color: #5496BD;
    display: block;
    width: 48px;
    height: 48px;
    padding-top: 17px;
    padding-bottom: 17px;
}

